create categorised masks
Former-commit-id: 40dc80a408cb69842fd16c18cb8a44e91a3d4ba1

--- a/protyping/auto-segmentation/sb/038-upload-masks.ipynb
+++ b/protyping/auto-segmentation/sb/038-upload-masks.ipynb
@@ -75,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = client.get_dataset(dataset_name)"
+    "dataset = client.get_dataset(dataset_name)\n",
+    "dataset"
    ]
   },
   {
@@ -114,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct_uid = list(ct_uid_to_upload_uuid.keys())[0]"
+    "# ct_uid = list(ct_uid_to_upload_uuid.keys())[30]"
    ]
   },
   {
@@ -123,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct_uid"
+    "# ct_uid"
    ]
   },
   {
@@ -139,7 +140,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ct_uid = '1.2.840.113704.1.111.3096.1537312918.112198'"
+    "ct_uid = '1.2.840.113704.1.111.3096.1537312918.112198'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload_uuid = ct_uid_to_upload_uuid[ct_uid]\n",
+    "upload_uuid"
    ]
   },
   {
@@ -348,15 +359,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(masks['brain'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def is_mask_a_subset(subset, superset):\n",
     "    return np.all(np.logical_and(subset, superset) == subset)"
    ]
@@ -386,7 +388,8 @@
     "\n",
     "sorting_key = functools.cmp_to_key(cmp)\n",
     "\n",
-    "sorted(list(contours_on_this_slice), key=sorting_key)"
+    "mask_assignment_order = sorted(list(contours_on_this_slice), key=sorting_key, reverse=True)\n",
+    "mask_assignment_order"
    ]
   },
   {
@@ -395,17 +398,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = list(set(names_map.values()))\n",
-    "names.remove(None)\n",
-    "\n",
-    "names.sort()\n",
-    "\n",
-    "def get_ids(structure_name):\n",
-    "    index = names.index(structure_name)\n",
-    "    instance_id = index + 1\n",
-    "    category_id = instance_id + 1\n",
-    "    \n",
-    "    return instance_id, category_id"
+    "def get_instance_id(name):\n",
+    "    # So that 0 isn't a category\n",
+    "    return category_id_map[name] + 1"
    ]
   },
   {
@@ -414,31 +409,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, name in enumerate(names):\n",
-    "    print(i, name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_ct"
+    "catagorised_mask = np.zeros(ct_size)\n",
+    "for structure_name in mask_assignment_order:\n",
+    "    instance_id = get_instance_id(structure_name)\n",
+    "    catagorised_mask[masks[structure_name]] = instance_id"
    ]
   },
   {
@@ -447,375 +421,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HU = dcm_ct.pixel_array * dcm_ct.RescaleSlope + dcm_ct.RescaleIntercept"
+    "plt.imshow(catagorised_mask)\n",
+    "plt.axis('equal')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.min(HU)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.max(HU)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2048"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded = skimage.transform.resize(HU, ct_size, mode='edge', preserve_range=True, anti_aliasing=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uint16_image = ((expanded + 1024) / 4096 * 2**16).astype(np.uint16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20,20))\n",
-    "plt.imshow(uint16_image)\n",
-    "plt.axis('equal')\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "png_file = io.BytesIO()\n",
-    "\n",
-    "imageio.imsave(png_file, uint16_image, format='png', prefer_uint8=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up the client\n",
-    "client = segments.SegmentsClient(segments_api_key)\n",
-    "dataset_name = 'SimonBiggs/AnimalContours' # Name of a dataset you've created on Segments.ai\n",
-    "\n",
-    "sample_name = f\"{ct_uid}.png\"\n",
-    "\n",
-    "asset = client.upload_asset(png_file, filename=sample_name)\n",
-    "image_url = asset[\"url\"]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample_name = f\"{ct_uid}.png\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attributes = {\n",
-    "    \"image\": { \"url\": image_url }\n",
-    "}\n",
-    "result = client.add_sample(dataset_name, sample_name, attributes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expanded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_ct.pixel_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm_ct.pixel_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asset = client.upload_asset(file, filename=\"violet.jpg\")\n",
-    "image_url = asset[\"url\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# Upload the images to Segments.ai\n",
-    "for i, url in enumerate(image_urls):\n",
-    "    sample_name = 'image_{:05}.jpg'.format(i)\n",
-    "    attributes = {\n",
-    "        \"image\": { \"url\": url }\n",
-    "    }\n",
-    "    result = client.add_sample(dataset_name, sample_name, attributes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GH_API = \"https://api.github.com\"\n",
-    "GH_REPO = f\"{GH_API}/repos/pymedphys/data\"\n",
-    "GH_TAGS = f\"{GH_API}/releases/tags/segments.ai\"\n",
-    "AUTH = f\"Authorization: token {github_api_key}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# repo = sys.argv[1]\n",
-    "# tag = sys.argv[2]\n",
-    "# upload_file = sys.argv[3]\n",
-    "\n",
-    "# token = os.environ['GITHUB_TOKEN']\n",
-    "\n",
-    "# url_template = 'https://{}.github.com/repos/' + repo + '/releases'\n",
-    "\n",
-    "# # Create.\n",
-    "# _json = json.loads(urlopen(Request(\n",
-    "#     url_template.format('api'),\n",
-    "#     json.dumps({\n",
-    "#         'tag_name': tag,\n",
-    "#         'name': tag,\n",
-    "#         'prerelease': True,\n",
-    "#     }).encode(),\n",
-    "#     headers={\n",
-    "#         'Accept': 'application/vnd.github.v3+json',\n",
-    "#         'Authorization': 'token ' + token,\n",
-    "#     },\n",
-    "# )).read().decode())\n",
-    "# release_id = _json['id']\n",
-    "\n",
-    "# # Upload.\n",
-    "# with open(upload_file, 'br') as myfile:\n",
-    "#     content = myfile.read()\n",
-    "# _json = json.loads(urlopen(Request(\n",
-    "#     url_template.format('uploads') + '/' + str(release_id) + '/assets?' \\\n",
-    "#       + urlencode({'name': os.path.split(upload_file)[1]}),\n",
-    "#     content,\n",
-    "#     headers={\n",
-    "#         'Accept': 'application/vnd.github.v3+json',\n",
-    "#         'Authorization': 'token ' + token,\n",
-    "#         'Content-Type': 'application/zip',\n",
-    "#     },\n",
-    "# )).read().decode())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# masks['bite_block'][:, 1000:1010] = True\n",
-    "\n",
-    "# plt.pcolormesh(masks['bite_block'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask_a = masks['eye_left']\n",
-    "mask_b = masks['brain']\n",
-    "\n",
-    "disjoint = np.logical_xor(mask_a, mask_b) == np.logical_or(mask_a, mask_b)\n",
-    "np.any(np.invert(disjoint))\n",
-    "# plt.pcolormesh()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for contour_labels in itertools.permutations(contours_on_this_slice, 2):\n",
-    "    print(contour_labels)\n",
-    "    \n",
-    "    mask_a = masks[contour_labels[0]]\n",
-    "    mask_b = masks[contour_labels[1]]\n",
-    "    \n",
-    "    disjoint = np.logical_xor(\n",
-    "        np.logical_xor(mask_a, mask_b),\n",
-    "        np.logical_or(mask_a, mask_b)\n",
-    "    )\n",
-    "    \n",
-    "    print(np.any(disjoint))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.all(np.logical_and(masks['brain'], masks['patient']) == masks['brain'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
