masks uploading but not currently working
Former-commit-id: 1c803b3466ddfc6da51ad8ef5beee5b9b8b5dde2

--- a/protyping/auto-segmentation/sb/038-upload-masks.ipynb
+++ b/protyping/auto-segmentation/sb/038-upload-masks.ipynb
@@ -449,11 +449,37 @@
    "outputs": [],
    "source": [
     "png_file = io.BytesIO()\n",
-    "imageio.imsave(png_file, catagorised_mask, format='png', prefer_uint8=True)\n",
-    "    \n",
+    "imageio.imsave(png_file, catagorised_mask, format='PNG-PIL', prefer_uint8=True)\n",
+    "png_file.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read_image = imageio.imread(png_file, format='PNG-PIL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set(np.ravel(read_image).tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sample_name = f\"{ct_uid}_mask.png\"\n",
     "asset = client.upload_asset(png_file, filename=sample_name)\n",
-    "image_url = asset[\"url\"]\n"
+    "image_url = asset[\"url\"]"
    ]
   },
   {
