don't upload if already exists

--- a/protyping/auto-segmentation/sb/037-upload-all-ct-slices.ipynb
+++ b/protyping/auto-segmentation/sb/037-upload-all-ct-slices.ipynb
@@ -83,7 +83,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "samples = client.get_samples(dataset_name)\n",
+    "\n",
+    "ct_uid_to_upload_uuid = {\n",
+    "    item['name'].replace(\".png\", \"\"): item['uuid']\n",
+    "    for item in samples\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_uids_already_uploaded = set(ct_uid_to_upload_uuid.keys())\n",
+    "# ct_uids_already_uploaded"
+   ]
   },
   {
    "cell_type": "code",
@@ -111,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct_uids = ct_image_paths.keys()"
+    "ct_uids = set(ct_image_paths.keys()).difference(ct_uids_already_uploaded)"
    ]
   },
   {
@@ -156,6 +173,13 @@
     "    }\n",
     "    result = client.add_sample(dataset_name, sample_name, attributes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
