--- a/protyping/auto-segmentation/sb/039-upload-masks.ipynb
+++ b/protyping/auto-segmentation/sb/039-upload-masks.ipynb
@@ -135,6 +135,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "samples[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get_label('b2b5e02a-e5a3-4cf0-a361-a2349207c930', 'contouring')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "(\n",
     "    data_path_root,\n",
     "    structure_set_paths,\n",
@@ -228,8 +246,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ct_uid in ct_uid_to_upload_uuid.keys():\n",
-    "    print(ct_uid)\n",
+    "for ct_uid, sample_uuid in ct_uid_to_upload_uuid.items():\n",
+    "    current_label_data = client.get_label(sample_uuid, 'contouring')\n",
+    "    print(ct_uid, sample_uuid)\n",
+    "    try:\n",
+    "        if current_label_data['label_status'] == 'PRELABELED':\n",
+    "            print('Already labelled. Skipping...')\n",
+    "            continue\n",
+    "    except KeyError:\n",
+    "        pass\n",
+    "    \n",
     "    \n",
     "    structure_uid = ct_uid_to_structure_uid[ct_uid]\n",
     "    \n",
@@ -252,7 +278,7 @@
     "        contours_on_this_slice = contours_by_ct_uid[ct_uid].keys()\n",
     "    except KeyError as e:\n",
     "        print(e)\n",
-    "        print(\"skipping...\")\n",
+    "        print(\"Key Error in contours on slice. Skipping...\")\n",
     "        continue        \n",
     "    \n",
     "    masks = dict()\n",
@@ -272,12 +298,12 @@
     "            key=create_sorting_key(masks), reverse=True)\n",
     "    except ValueError as e:\n",
     "        print(e)\n",
-    "        print(\"skipping...\")\n",
+    "        print(\"Disjoint contours. Skipping...\")\n",
     "        continue\n",
     "    \n",
     "    objects_map = [\n",
     "        {\n",
-    "            \"instance_id\": get_instance_id(name),\n",
+    "            \"id\": get_instance_id(name),\n",
     "            \"category_id\": category_id_map[name]\n",
     "        }\n",
     "        for name in contours_on_this_slice\n",
@@ -299,12 +325,21 @@
     "    sample_uuid = ct_uid_to_upload_uuid[ct_uid]\n",
     "    task_name = \"contouring\"\n",
     "    attributes = {\n",
-    "        \"segmentation_bitmap_url\": image_url,\n",
-    "        \"objects\": objects_map\n",
+    "        \"segmentation_bitmap\": {\n",
+    "            \"url\": image_url\n",
+    "        },\n",
+    "        \"annotations\": objects_map\n",
     "    }\n",
     "\n",
     "    client.add_label(sample_uuid, task_name, attributes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
