fix dicom_store name
Former-commit-id: 6fd1a1451ec5da430bafbb9a204c9562fb2f9cd4

--- a/protyping/dicom/extend-ct/extend-ct-server.ipynb
+++ b/protyping/dicom/extend-ct/extend-ct-server.ipynb
@@ -74,6 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# debugging\n",
+    "\n",
     "# datasets = list(DICOM_STORE.values())[0]\n",
     "# extended = extend_datasets(datasets)\n",
     "\n",
@@ -85,15 +87,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "DICOM_STORE = {}\n",
+    "dicom_store = {}\n",
     "\n",
     "\n",
     "def handle_open(event):\n",
@@ -101,13 +96,13 @@
     "\n",
     "\n",
     "def handle_accepted(event): \n",
-    "    DICOM_STORE[event.assoc] = []\n",
+    "    dicom_store[event.assoc] = []\n",
     "    \n",
     "    return 0x0000\n",
     "\n",
     "\n",
     "def handle_store(event):\n",
-    "    DICOM_STORE[event.assoc].append(event.dataset)\n",
+    "    dicom_store[event.assoc].append(event.dataset)\n",
     "    \n",
     "    return 0x0000\n",
     "\n",
@@ -145,55 +140,6 @@
     "    \n",
     "ae.start_server((\"\", INCOMING_PORT), block=True, evt_handlers=handlers)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
