fix dicom_store name

--- a/protyping/dicom/extend-ct/extend-ct-server.ipynb
+++ b/protyping/dicom/extend-ct/extend-ct-server.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# debugging\n",
     "\n",
-    "# datasets = list(DICOM_STORE.values())[0]\n",
+    "# datasets = list(dicom_store.values())[0]\n",
     "# extended = extend_datasets(datasets)\n",
     "\n",
     "# send_datasets(extended, ae)"
@@ -108,7 +108,7 @@
     "\n",
     "\n",
     "def handle_release(event, ae):\n",
-    "    datasets = extend_datasets(DICOM_STORE[event.assoc])\n",
+    "    datasets = extend_datasets(dicom_store[event.assoc])\n",
     "    send_datasets(datasets, ae)\n",
     "    \n",
     "    return 0x0000"
