fixed pylint issues

--- a/site-specific/cancer-care-associates/production/Monaco/De-Archiving GUI/patient_to_be_archived_tool/Archive anything older than given weeks since touched.ipynb
+++ b/site-specific/cancer-care-associates/production/Monaco/De-Archiving GUI/patient_to_be_archived_tool/Archive anything older than given weeks since touched.ipynb
@@ -241,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in tqdm(range(len(directories_to_be_archived))):    \n",
-    "    assert not(os.path.exists(directories_to_be_archived[i])), \"The move failed to delete the clinical file!\"\n",
+    "for i in tqdm(range(len(directories_to_be_archived))):  \n",
+    "    assert not(os.path.exists(directories_to_be_archived[i])), f\"The move failed to delete the clinical file!\\n{directories_to_be_archived[i]}\"\n",
     "    assert not(os.path.exists(location_to_move_to[i])), \"The move failed to delete the holding location!\"\n",
     "    assert os.path.exists(test_location_to_move_to[i]), \"File not found within archive!\"\n",
     "    \n",
