update upload masks

--- a/protyping/auto-segmentation/sb/039-upload-masks.ipynb
+++ b/protyping/auto-segmentation/sb/039-upload-masks.ipynb
@@ -153,6 +153,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.put"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "(\n",
     "    data_path_root,\n",
     "    structure_set_paths,\n",
@@ -246,13 +255,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ct_uid, sample_uuid = list(ct_uid_to_upload_uuid.items())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.get_label(sample_uuid, 'contouring')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_uuid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.put?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for ct_uid, sample_uuid in ct_uid_to_upload_uuid.items():\n",
     "    current_label_data = client.get_label(sample_uuid, 'contouring')\n",
     "    print(ct_uid, sample_uuid)\n",
     "    try:\n",
-    "        if current_label_data['label_status'] == 'PRELABELED':\n",
-    "            print('Already labelled. Skipping...')\n",
+    "        if current_label_data['label_status'] in ('PRELABELED', 'REVIEWED', 'LABELED'):\n",
+    "            print('Already labelled. Skipping...')            \n",
     "            continue\n",
+    "        else:\n",
+    "            print(current_label_data['label_status'])\n",
     "    except KeyError:\n",
     "        pass\n",
     "    \n",
@@ -331,7 +378,7 @@
     "        \"annotations\": objects_map\n",
     "    }\n",
     "\n",
-    "    client.add_label(sample_uuid, task_name, attributes)"
+    "    client.add_label(sample_uuid, task_name, attributes, label_status='REVIEWED')"
    ]
   },
   {
