--- a/protyping/dicom/extend-ct/extend-ct-server.ipynb
+++ b/protyping/dicom/extend-ct/extend-ct-server.ipynb
@@ -21,9 +21,12 @@
    "outputs": [],
    "source": [
     "INCOMING_PORT = 33304\n",
-    "TPS_PORT = 35104\n",
+    "# TPS_PORT = 35104\n",
     "\n",
-    "TPS_IP = '127.0.0.1'"
+    "# TPS_IP = '127.0.0.1'\n",
+    "\n",
+    "TPS_PORT = 104\n",
+    "TPS_IP = 'rccc-monacoda'"
    ]
   },
   {
