--- a/protyping/mosaiq/mosaiq-field-comparison/mosaiq-to-mosaiq.ipynb
+++ b/protyping/mosaiq/mosaiq-field-comparison/mosaiq-to-mosaiq.ipynb
@@ -168,9 +168,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "pymedphys-v0.7.2",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "pymedphys-v0.7.2"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
@@ -182,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
