--- a/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200807_unstable_6FFF_investigation\\wlutz\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200825_monthly\\wlutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
