move pydicom down the list
Former-commit-id: 624dc7395f567db39145908ebab31b2cd40b1c20

--- a/protyping/auto-segmentation/sb/040-show-cost-function-plot.ipynb
+++ b/protyping/auto-segmentation/sb/040-show-cost-function-plot.ipynb
@@ -16,9 +16,7 @@
     "\n",
     "import skimage.filters\n",
     "\n",
-    "from IPython import display\n",
-    "\n",
-    "import pydicom"
+    "from IPython import display"
    ]
   },
   {
@@ -50,8 +48,16 @@
    "outputs": [],
    "source": [
     "!pip install \"pymedphys>=0.33.0\"\n",
-    "!pip install \"pydicom>=2\"\n",
-    "!pip install \"scikit-image\""
+    "!pip install \"pydicom>=2\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pydicom"
    ]
   },
   {
