working on extract-mean-doses, need to fix mask axis order before continuing

--- a/protyping/lectures/02-extract-mean-doses-from-structure.ipynb
+++ b/protyping/lectures/02-extract-mean-doses-from-structure.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pydicom==2.0.0"
+    "!pip install pydicom==2.0.0\n",
+    "!pip install pymedphys==0.33.0"
    ]
   },
   {
@@ -20,19 +21,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import pydicom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://zenodo.org/record/4042693/files/979797_VMAT.dcm?download=1'\n",
-    "filepath = 'test.dcm'\n",
+    "import pydicom\n",
+    "import pymedphys\n",
     "\n",
-    "request.urlretrieve(url, filepath)"
+    "# A private import, not part of the stable API\n",
+    "import pymedphys._dicom.dose as dcmdose"
    ]
   },
   {
@@ -41,98 +34,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rtplan_dataset = pydicom.read_file(filepath, force=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rtplan_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dir(rtplan_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dir(rtplan_dataset.BeamSequence[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "beam = rtplan_dataset.BeamSequence[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "beam.ControlPointSequence[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "control_point = beam.ControlPointSequence[0]\n",
-    "control_point.BeamLimitingDevicePositionSequence[0].LeafJawPositions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "control_point.BeamLimitingDevicePositionSequence[0].RTBeamLimitingDeviceType "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "control_point.GantryAngle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gantry_angles = []\n",
-    "jaw_positions = []\n",
+    "dose_url = 'https://zenodo.org/record/4042842/files/RD.2.16.840.1.114337.1.1.1600065398.2_Anonymised.dcm?download=1'\n",
+    "structure_url = 'https://zenodo.org/record/4042842/files/RS.1.2.840.10008.5.1.4.1.1.481.3.1600145017_Anonymised.dcm?download=1'\n",
     "\n",
-    "for control_point in beam.ControlPointSequence:\n",
-    "    gantry_angles.append(control_point.GantryAngle)\n",
-    "    \n",
-    "    beam_limiting_device_position = control_point.BeamLimitingDevicePositionSequence[0]\n",
-    "    assert beam_limiting_device_position.RTBeamLimitingDeviceType == 'ASYMY'\n",
-    "    \n",
-    "    jaw_positions.append(beam_limiting_device_position.LeafJawPositions)"
+    "dose_filepath = 'dose.dcm'\n",
+    "structure_filepath = 'structure.dcm'"
    ]
   },
   {
@@ -141,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(gantry_angles, jaw_positions, '.')"
+    "request.urlretrieve(dose_url, dose_filepath)\n",
+    "request.urlretrieve(structure_url, structure_filepath)"
    ]
   },
   {
@@ -150,25 +57,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlc_positions = []\n",
-    "num_leaf_pairs = 80\n",
+    "dose_dataset = pydicom.read_file(dose_filepath, force=True)\n",
+    "structure_dataset = pydicom.read_file(structure_filepath, force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_names_to_pull = ['11', '12', '13', '14', '15', '16', '17', '18']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(dose_z, dose_y, dose_x), dose = pymedphys.dicom.zyx_and_dose_from_dataset(dose_dataset)\n",
     "\n",
-    "for control_point in beam.ControlPointSequence:   \n",
-    "    beam_limiting_device_position = control_point.BeamLimitingDevicePositionSequence[1]\n",
-    "    assert beam_limiting_device_position.RTBeamLimitingDeviceType == 'MLCX'\n",
-    "    \n",
-    "    dicom_mlc_record = beam_limiting_device_position.LeafJawPositions\n",
-    "    assert len(dicom_mlc_record) == num_leaf_pairs*2\n",
-    "    \n",
-    "    \n",
-    "    mlc_positions.append([\n",
-    "        dicom_mlc_record[0:num_leaf_pairs],\n",
-    "        dicom_mlc_record[num_leaf_pairs:],\n",
-    "    ])\n",
-    "    \n",
+    "# axis order is [z, y, x]\n",
+    "print(dose.shape)\n",
     "\n",
-    "mlc_positions = np.array(mlc_positions)\n",
-    "mlc_positions.shape"
+    "# swap to [x, y, z]\n",
+    "dose = np.swapaxes(dose, 0, 2)\n",
+    "dose.shape"
    ]
   },
   {
@@ -177,8 +92,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(gantry_angles, mlc_positions[:,:,40], '.')"
+    "len(dose_x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(dose_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(dose_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# axis order is [y, x, z]\n",
+    "mask = dcmdose.get_dose_grid_structure_mask('11', structure_dataset, dose_dataset)\n",
+    "\n",
+    "# swap to [x, y, z]\n",
+    "mask = np.swapaxes(mask, 0, 1)\n",
+    "\n",
+    "mask.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for structure_name in structure_names:\n",
+    "\n",
+    "    mask = dcmdose.get_dose_grid_structure_mask(structure_name, dicom_structure, dicom_doses[case])\n",
+    "#         print(mask.shape)\n",
+    "    new_mask = np.swapaxes(mask, 0, 1)\n",
+    "    new_mask = np.swapaxes(new_mask, 0, 2)\n",
+    "#         print(new_mask.shape)\n",
+    "\n",
+    "    dose = dcmdose.dose_from_dataset(dicom_doses[case])\n",
+    "\n",
+    "    mean_doses[case][structure_name] = np.mean(dose[new_mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
