update lecture demos

--- a/protyping/lectures/01-testing-dose-grid-structure-mask.ipynb
+++ b/protyping/lectures/01-testing-dose-grid-structure-mask.ipynb
@@ -6,11 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install pydicom==2.0.0\n",
+    "!pip install pymedphys==0.34.0dev0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import shapely.geometry\n",
     "\n",
+    "# A private imports, not part of the stable API\n",
     "from pymedphys._dicom.create import dicom_dataset_from_dict\n",
     "from pymedphys._dicom.coords import xyz_axes_from_dataset\n",
     "from pymedphys._dicom.dose import get_dose_grid_structure_mask"
@@ -290,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymedphys-master",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pymedphys-master"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
