--- a/protyping/lectures/02-extract-mean-doses-from-structure.ipynb
+++ b/protyping/lectures/02-extract-mean-doses-from-structure.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "!pip install pydicom==2.0.0\n",
-    "!pip install pymedphys==0.34.0dev0"
+    "!pip install pymedphys==0.34.0dev1"
    ]
   },
   {
@@ -107,9 +107,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "z_slices = []\n",
+    "\n",
+    "for z in structure_z:\n",
+    "    z = np.unique(z)\n",
+    "    assert len(z) == 1\n",
+    "    z_slices.append(z[0])\n",
+    "    \n",
+    "z_slices = np.array(z_slices)\n",
+    "z_slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dose_z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "structure_index = 0\n",
     "\n",
-    "z_slice = structure_z[structure_index][0]\n",
+    "z_slice = np.unique(structure_z[0])\n",
+    "assert len(z_slice) == 1\n",
+    "\n",
+    "z_slice = z_slice[0]\n",
     "z_slice"
    ]
   },
@@ -237,9 +266,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
