--- a/protyping/auto-segmentation/sb/04-mini-data/041-begin-minification.ipynb
+++ b/protyping/auto-segmentation/sb/04-mini-data/041-begin-minification.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_expansion = 1"
+    "mask_expansion = 5"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "source": [
     "# Create masks for the following structures, in the following order\n",
     "structures_to_learn = [\n",
-    "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
+    "    'eye_left', 'eye_right', 'patient']\n",
     "\n",
     "# Use the following to filter the slices used for training, validation,\n",
     "# and testing\n",
@@ -94,11 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testing_uids = structure_uids[0:2]\n",
-    "validation_uids = structure_uids[2:5]\n",
-    "training_uids = structure_uids[5::]\n",
-    "\n",
-    "print(testing_uids)"
+    "dataset = pipeline.create_dataset(ct_uids, structures_to_learn, expansion=mask_expansion)"
    ]
   },
   {
@@ -106,47 +102,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def filter_out_ct_uids(orignal_ct_uid_list, to_be_removed):\n",
-    "    return [item for item in orignal_ct_uid_list if not item in to_be_removed]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, testing_ct_uids = pipeline.get_filtered_uids(filters, structure_uids=structure_uids[0:2])\n",
-    "_, validation_ct_uids = pipeline.get_filtered_uids(filters, structure_uids=structure_uids[2:5])\n",
-    "_, training_ct_uids = pipeline.get_filtered_uids(filters, structure_uids=structure_uids[5::])\n",
-    "\n",
-    "# Adjust the following for further removal of CT UIDs (data cleaning)\n",
-    "ct_uids_for_removal = ['1.2.840.113704.1.111.2288.1561526844.18195', '1.2.840.113704.1.111.2288.1561527104.18456']\n",
-    "# ct_uids_for_removal = []\n",
-    "\n",
-    "testing_ct_uids = filter_out_ct_uids(testing_ct_uids, ct_uids_for_removal)\n",
-    "validation_ct_uids = filter_out_ct_uids(validation_ct_uids, ct_uids_for_removal)\n",
-    "training_ct_uids = filter_out_ct_uids(training_ct_uids, ct_uids_for_removal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NOTE TensorFlow is not yet installed as part of requirements\n",
-    "\n",
-    "testing = pipeline.create_dataset(\n",
-    "    testing_ct_uids, structures_to_learn, expansion=mask_expansion)\n",
-    "\n",
-    "validation = pipeline.create_dataset(\n",
-    "    validation_ct_uids, structures_to_learn, expansion=mask_expansion)\n",
-    "\n",
-    "training = pipeline.create_dataset(\n",
-    "    training_ct_uids, structures_to_learn, expansion=mask_expansion)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -183,15 +139,15 @@
     "            plt.plot(*contour.T, colour)\n",
     "            \n",
     "    \n",
-    "    plt.axis('equal')\n",
-    "    ax = plt.gca()\n",
-    "    xlim = ax.get_xlim()\n",
-    "    ylim = ax.get_ylim()\n",
-    "    \n",
     "    contours = mask.get_contours_from_mask(\n",
     "        x_grid, y_grid, output_array[:,:,-1])\n",
     "    for contour in contours:\n",
     "        plt.plot(*contour.T, 'k--')\n",
+    "        \n",
+    "    plt.axis('equal')\n",
+    "    ax = plt.gca()\n",
+    "    xlim = ax.get_xlim()\n",
+    "    ylim = ax.get_ylim()\n",
     "    \n",
     "    windowed = np.copy(input_array)\n",
     "\n",
@@ -200,10 +156,12 @@
     "    windowed[windowed<vmin] = vmin\n",
     "    windowed[windowed>vmax] = vmax\n",
     "\n",
-    "    plt.contourf(x_grid, y_grid, windowed, 50)\n",
+    "    plt.pcolormesh(x_grid, y_grid, windowed, shading=\"nearest\")\n",
     "    plt.colorbar()\n",
     "    ax.set_xlim(xlim)\n",
-    "    ax.set_ylim(ylim)"
+    "    ax.set_ylim(ylim)\n",
+    "    \n",
+    "    return xlim, ylim"
    ]
   },
   {
@@ -212,12 +170,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ct_uid, x_grid, y_grid, input_array, output_array in training:    \n",
+    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset:\n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
     "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
-    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
-    "    plt.show()"
+    "    xlim, ylim = diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    print(np.mean(xlim))"
    ]
   },
   {
@@ -244,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
